**  denotes quite substantial/important changes
*** denotes really big changes 

1.6-2

* New function `bam.update' allows efficient updating of very large
  strictly additive models fitted by `bam' when additional data become 
  available. 

* gam.check now accepts graphics parameters.

* fixed problem in welcome message that messed up ESS.

1.6-1

* Bug in cSplineDes caused bases to be non-cyclic unless first 
  knot was at 0. This also affected the "cp" smoother class. Fixed. 

* null.deviance calculation was wrong for case with offset and 
  weights. Fixed.

* Built in strictly 1D smoothers now give an informative error message if 
  an attempt is made to use them for multidimensional smoothing.

* gam.check generated a spurious error when applied to a model with no
  estimated smoothing parameters. Fixed.

1.6-0

*** Routine `bam' added for fitting GAMs to very large datasets.
    See ?bam

** p-value method tweaked again. Reference DoF for testing now 
  defaults to the alternative EDF estimate (based on 2F - FF where 
  F = (X'WX+S)^{-1}X'WX). `magic.post.proc' and `gam.fit3.post.proc'
  changed to provide this. p-values still a bit too small, but only 
  slightly so, if `method="ML"' is the smoothness selector.

* bad bug in `get.null.coef' could cause fit failure as a result of 
  initial null coefs predicting infinite deviance.

* REML/ML convergence could be response scale sensitive, because of 
  innapropriate convergence testing scaling in newton and bfgs - 
  fixed.

* Slight fix to REML (not ML) score calculation in gam.fit3 - 
  Mp/2*log(2*pi*scale) was missing from REML score, where Mp is
  total null space dimension for model.

* `summary.gam' bug fix: REML/ML models were always treated as if
  scale parameter had been estimated. gamObject should now contain 
  `scale.estimated' indicating whether or not scale estimated

* some modifications to smoothCon and gam.setup to allow smooth
  constructors to return Matrix style sparse model matrices and 